MAINT: Add the gemm_small_kernel variants
w/o and with b0

--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -601,7 +601,286 @@ base_kops = [
         }},
     },
   },
-  # TODO(rg): iunucopy stuff
+  { 'base': '?gemm_small_kernel',
+    'modes': {
+        's': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'd': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'c': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_nc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_tc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_ct': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_cc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'z': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_nc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_tc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_ct': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_cc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+    },
+  },
+  { 'base': '?gemm_small_kernel_b0',
+    'modes': {
+        's': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'd': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'gemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'c': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_nc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_tc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_ct': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_cc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+        'z': {
+            'exts': {
+                '_nn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_rr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nn.c',
+                       },
+                '_nt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_nc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_rc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_nt.c',
+                       },
+                '_tn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cn': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_cr': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tn.c',
+                       },
+                '_tt': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_tc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_ct': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+                '_cc': {'dir': 'generic',
+                        'kernel': 'zgemm_small_matrix_kernel_tt.c',
+                       },
+            }
+        },
+    },
+  },
 ]
 
 kernel_confs = []
