--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -98,7 +98,7 @@ foreach (CBLAS_FLAG ${CBLAS_FLAGS})
   if (BUILD_SINGLE OR BUILD_DOUBLE)
   GenerateNamedObjects("sdsdot.c" "" "sdsdot" ${CBLAS_FLAG} "" "" true "SINGLE")
 	if(CBLAS_FLAG EQUAL 1)
-	GenerateNamedObjects("gemm_batch.c" "" "gemm_batch" ${CBLAS_FLAG} "" "" true)
+	GenerateNamedObjects("gemm_batch.c" "" "gemm_batch" ${CBLAS_FLAG} "" "" false)
 endif ()
 endif ()
 if (BUILD_DOUBLE)
