--- a/.github/workflows/cirun-asv.yml
+++ b/.github/workflows/cirun-asv.yml
@@ -61,8 +61,9 @@ jobs:
       - name: Install python dependencies
         run: |
           pip3 install numpy meson meson-python ninja build asv
-          # sudo apt install libopenblas-dev    # XXX
-          pip3 install scipy_openblas32
+          # pip3 install scipy_openblas32
+          # install the nightly OpenBLAS wheel
+          pip install -i https://pypi.anaconda.org/scientific-python-nightly-wheels/simple scipy-openblas32
           python3 -c'import scipy_openblas32 as so; print(so.get_pkg_config())' > scipy_openblas.pc
           export PKG_CONFIG_PATH=$PWD
           echo ">>>> PKG_CONFIG" $PKG_CONFIG_PATH
